Grace/tests/gibbs/errors/t192.grace
// ERROR = P1039
method foo(a,*b {
    print(a)
    print(b)
}
